# automaton-auditor

./: .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TESTING.md  TEST_SUITE_SUMMARY.md  VERIFICATION.md  debug_prosecutor.py  main.py  pyproject.toml  pytest.ini  run_tests.sh  test_openrouter.py  tmp_crossref_fullcheck.py
.github/workflows/: unittests.yml
audit/report_onpeer_generated/: audit_report_20260228_144439.md  audit_report_20260228_150115.md  audit_report_20260228_150723.md  audit_report_20260228_151140.md  audit_report_20260228_151434.md
audit/report_onself_generated/: audit_report.md  audit_report_20260228_144843.md  audit_report_20260228_155040.md  audit_report_20260228_155530.md  audit_report_20260228_155908.md  audit_report_20260228_160312.md  audit_report_20260228_160741.md  audit_report_20260228_165921.md  audit_report_20260228_170705.md  audit_report_20260228_172502.md  audit_report_20260228_220757.md  audit_report_20260228_225322.md  audit_report_20260228_230533.md  audit_report_20260228_232028.md  audit_report_20260228_234215.md  audit_report_20260228_235017.md  audit_report_20260301_000635.md  audit_report_20260301_002031.md  audit_report_20260301_003621.md  audit_report_20260301_005039.md  audit_report_20260301_010708.md  audit_report_20260301_095048.md  audit_report_20260301_100844.md  draft_replacement_report.md
automaton_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: programmatic_usage.py
reports/: final_report_take_7.md
reports/audit/: test.py
reports/audit/report_onpeer_generated/: audit_report.md  audit_report_20260227_102152.md  audit_report_20260227_174222.md
reports/audit/report_onself_generated/: audit_report-2.md  audit_report-old.md  audit_report_20260224_151636.md  audit_report_20260224_154328.md  (+8 more)
rubric/: week2_rubric.json
src/: main.py
src/agents/: __init__.py
src/core/: __init__.py  config.py  graph.py  state.py
src/tools/: __init__.py  ast_tools.py  git_tools.py  pdf_tools.py  security.py
src/utils/: __init__.py  exceptions.py  formatters.py  logger.py  validators.py
tests/: conftest.py  test_agents.py  test_core_config.py  test_core_state.py  test_detectives.py  test_integration.py  test_main.py  test_new_features.py  test_tools_ast.py  test_tools_pdf.py  test_tools_security.py  test_utils_exceptions.py  test_utils_formatters.py  test_utils_logger.py  test_utils_validators.py
(+11 files in other folders)
