[project]
name = "automaton-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.15",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf2>=3.0.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "rich>=14.3.3",
]
