[project]
name = "automaton-auditor"
version = "2.0.0"
description = "Deep LangGraph swarms for autonomous code governance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.15",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "typer>=0.12.3",
    "pypdf>=6.7.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "mypy>=1.10.0",
    "pytest>=9.0.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]
