[project]
name = "automaton-auditor"
version = "2.0.0"
description = "Deep LangGraph swarms for autonomous code governance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.15",
    "langchain-anthropic>=0.3.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "typer>=0.12.3",
    "pypdf>=6.7.2",
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "bandit>=1.8.2",
    "mypy>=1.10.0",
    "pip-audit>=2.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
show_error_codes = true
